--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,32 @@
   </head>
 
   <body>
-    <% if user_signed_in? %>
-      <p>hello <%= current_user.email %></p> <%= link_to 'signOUT', destroy_user_session_path, method: :delete %>
-    <% else %>
-      <%= link_to 'signIn', new_user_session_path %>
-    <% end %>
-    <%= yield %>
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="#">Features</a>
+        <a class="nav-item nav-link" href="#">Pricing</a>
+        <a class="nav-item nav-link disabled" href="#">Disabled</a>
+        <% if user_signed_in? %>
+           <p>Привет <%= current_user.email %></p>
+           <%= link_to 'Выйти',destroy_user_session_path, method: :delete%> 
+           <%= link_to 'Редактировать профиль', edit_user_registration_path, class: "btn btn-primary" %>
+        <% else %>
+           <%= link_to 'Войти',new_user_session_path, class: "btn btn-outline-primary" %>
+           <%= link_to 'Регистрация',new_user_registration_path, class: "btn btn-outline-primary" %>
+           <% end %>
+
+      </div>
+    </div>
+  </nav>
+
+
+  <%= yield %>
   </body>
 </html>
